fix quantity column alignment

--- a/public/css/order.css
+++ b/public/css/order.css
@@ -188,7 +188,7 @@
 }
 
 .order-line-item-table th.line-item-quantity {
-  padding-left: 37px;
+  padding-left: 20px;
 }
 
 .order-line-item-table th.line-item-notes,
